<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false">

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:layout_weight="1"
                android:contentDescription="@string/movie_poster_description"
                android:paddingEnd="@dimen/padding_4dp"
                android:paddingLeft="0dp"
                android:paddingRight="@dimen/padding_4dp"
                android:paddingStart="0dp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/ll_details_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            style="@style/MovieLabel"
                            android:text="@string/label_original_title" />

                        <TextView
                            android:id="@+id/tv_original_title"
                            style="@style/MovieDetailText"
                            tools:text="My original title" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            style="@style/MovieLabel"
                            android:text="@string/label_original_language" />

                        <TextView
                            android:id="@+id/tv_original_language"
                            style="@style/MovieDetailText"
                            tools:text="EN-US" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            style="@style/MovieLabel"
                            android:text="@string/label_vote_avg" />

                        <TextView
                            android:id="@+id/tv_vote_avg"
                            style="@style/MovieDetailText"
                            tools:text="8.5" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            style="@style/MovieLabel"
                            android:text="@string/label_runtime" />

                        <TextView
                            android:id="@+id/tv_runtime"
                            style="@style/MovieDetailText"
                            tools:text="120 mins" />
                    </LinearLayout>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/pb_details_loading"
                    android:layout_width="@dimen/progress_bar_size"
                    android:layout_height="@dimen/progress_bar_size"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/tv_details_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            style="@style/MovieDetailSectionTitle"
            android:text="@string/detail_overview_label" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_8dp" />

        <TextView
            style="@style/MovieDetailSectionTitle"
            android:text="@string/detail_similar_movies_label" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/similar_movie_poster_height">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_similar_movies_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/pb_similar_movies_loading"
                android:layout_width="@dimen/similar_movies_progress_bar_size"
                android:layout_height="@dimen/similar_movies_progress_bar_size"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
